# imagenet-on-tsubame

./: .gitignore  README.md  main.py  pyproject.toml
config/: imagenet_1k.yaml
config/backbone/: torchvision_r18.yaml  torchvision_r50.yaml
config/datamodule/: imagenet_1k_wds.yaml
config/head/: imagenet_1k.yaml
script/: train_imagenet.sh
src/imagenet_on_tsubame/: net.py
src/imagenet_on_tsubame/backbone/: resnet.py
src/imagenet_on_tsubame/dataset/: __init__.py  imagenet_1k_wds.py
